--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 	padding: 0;
 }
 
+body{background-color: #000;}
 #principal{
 	width: 1200px;
 	margin: 0 auto;
@@ -206,7 +207,6 @@
 	color:#f9f9f9;
 	background-color: #38241a;
 	opacity: 0.6;
-	
 }
 
 #quem-usa ul.redes-sociais li:hover{
